refactor: change couple names' font family to match invitation's

--- a/styles.css
+++ b/styles.css
@@ -25,9 +25,9 @@ body {
 }
 
 .couple-names {
-    font-family: 'Playfair Display', serif;
-    font-size: 3rem;
-    font-weight: 700;
+    font-family: 'Allura', cursive;
+    font-size: 7rem;
+    font-weight: 400;
     color: #4A523A;
     margin-bottom: 10px;
 }
