--- a/styles.css
+++ b/styles.css
@@ -66,7 +66,7 @@ body {
 }
 
 .page-title {
-    font-family: 'Playfair Display', serif;
+    font-family: 'Lato', Arial, Helvetica, sans-serif;
     font-size: 2.5rem;
     color: #4A523A;
     margin: 0;
@@ -202,7 +202,7 @@ body {
 }
 
 .gift-title {
-    font-family: 'Playfair Display', serif;
+    font-family: 'Lato', Arial, Helvetica, sans-serif;
     font-size: 1.3rem;
     font-weight: 700;
     color: #4A523A;
