--- a/styles.css
+++ b/styles.css
@@ -611,6 +611,33 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    overflow: hidden;
+}
+
+.frame-image-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+}
+
+.frame-image {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+.frame-image {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    transition: filter 0.1s ease-out;
+}
+
+.frame-image-container.shine .frame-image {
+    filter: brightness(1.025);
 }
 
 .frame-image {
